--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ window.addEventListener('scroll', checkScroll); // Проверить скрол
 	<header>
     <h1>Fixxelgram</h1>
   </header>
+  <div class="container">
     <center>
     <font style="color: #D7D7D7;">fixxelgram - это новый и инновационный мессенджер, который поможет вам оставаться на связи с друзьями, семьей и коллегами в любое время и в любом месте. Он предлагает удобный интерфейс, мощные функции и надежную защиту данных."<br><br>
     <img width="80" height="80" src="https://img.icons8.com/?size=170&id=qNUWGYHmn7j9&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
@@ -40,31 +41,32 @@ window.addEventListener('scroll', checkScroll); // Проверить скрол
 	Совместимость:<br>
 - Доступно для Android и iOS: Скачайте мессенджер с Google Play или App Store.
 <br><br>
-    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=mlRAnpSrvkXm&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
+    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=qetMBTOqExTL&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
 <br><br>
 Безопасность и конфиденциальность:<br>
 - Шифрование сообщений: Ваши сообщения защищены передачей по зашифрованному каналу.<br>
 - Конфиденциальность данных: Ваши личные данные и контент остаются строго конфиденциальными.
 <br><br>
-    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=xuqvSAsgBfzm&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
+    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=852&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
 <br><br>
 Ссылки на загрузку:<br>
 - App Store: скоро<br>
 - Google Play: скоро<br>
 - Web: fixxel.cf
 <br><br>
-    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=1mn9mJAYHSCK&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
+    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=92&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
 <br><br>
 Контактная информация:<br>
 - Служба поддержки <br>feedback@fixxel.cf
 <br><br>
-    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=1mn9mJAYHSCK&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
+    <img width="80" height="80" src="https://img.icons8.com/?size=170&id=73894&format=png" alt="external-raccoon-animal-flaticons-lineal-color-flat-icons-3"/>
 <br><br>
 </font>
+<a  href="https://icons8.com/icon/1mn9mJAYHSCK/енот"></a> icons by <a href="https://icons8.com">Icons8</a>
      </center>
+     </div>
       <!--<div class="fade-in">Надпись, которая должна появиться плавно</div>-->
-  <a  href="https://icons8.com/icon/1mn9mJAYHSCK/енот"></a> icons by <a href="https://icons8.com">Icons8</a>
-<div class="container">
-  	</div>
+  
+
 </body>
 </html>
